# stock-research-assistant-v0

./: .env.example  .gitignore  LICENSE  README.md  agent_demo.py  api.py  pyproject.toml  run_pipeline.sh  test_stock.py
backend/: DEPLOY.md  DEPLOYMENT_CHECKLIST.md  api.py  pyproject.toml  render.yaml  requirements.txt
backend/src/: agent_tools.py  embeddings.py  prompts.py  sec_fetcher.py  sec_parser.py  stock_agent.py  stock_tools.py
docs/: DEPENDENCY_MANAGEMENT.md  QA_IMPLEMENTATION_SUMMARY.md  QDRANT_QUICKSTART.md  QDRANT_SETUP.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  REQUIREMENTS.md  SETUP.md
examples/: README.md  add_qdrant_indexes.py  agent_demo.py  pipeline_demo.py  qa_api_demo.py  qdrant_cloud_example.py  query_demo.py  upload_to_qdrant_cloud.py
frontend/: DEPLOY_VERCEL.md  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/api/chat/: route.ts
frontend/components/: ChatInterface.tsx
src/: qa_engine.py  text_chunker.py  vector_store.py
src/agent/: README.md  __init__.py  agent.py  cache.py  config.py  prompts.py  tools.py
tests/: README.md  test_api.py  test_embed_endpoint.py  test_parser.py  test_qa_quick.py  test_sec_fetcher.py
